--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /venv
+
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+.venv/
+env/
+venv/
+
+# Node
+node_modules/
+
+# VS Code settings
+.vscode/
+
+# macOS
+.DS_Store
+
+# Logs
+*.log
